--- a/assets/styles/sass/style.sass
+++ b/assets/styles/sass/style.sass
@@ -7,8 +7,18 @@
 @use "components/_header"
 @use "components/_footer"
 @use "components/_home-cover"
-@use "components/_menus"
-@use "components/_dishes"
+
+@use "components/_menus/_menus-main"
+@use "components/_menus/_menus-lunch-menu"
+@use "components/_menus/_menus-duo-menu"
+@use "components/_menus/_menus-gourmands-menu"
+
+@use "components/_dishes/_dishes-main"
+@use "components/_dishes/_dishes-starters"
+@use "components/_dishes/_dishes-main-courses"
+@use "components/_dishes/_dishes-burgers"
+@use "components/_dishes/_dishes-vegetarians"
+@use "components/_dishes/_dishes-desserts"
 
 // Atoms
 @use "atoms/_button"
