Allergies + Users entity modified + add link to header and footer.

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -11,9 +11,14 @@
 				<a href="{{path('app_home')}}" class="btn btn__primary header__link">Accueil</a>
 				<a href="{{path('app_dishes')}}" class="btn btn__primary header__link">La carte</a>
 				<a href="{{path('app_menus')}}" class="btn btn__primary header__link">Nos menus</a>
-				<a href="#" class="btn btn__primary header__link">Réserver</a>
-				<a href="#" class="btn btn__primary header__link">S'inscire</a>
-				<a href="#" class="btn btn__primary header__link">Se connecter</a>
+				<a href="{{path('app_reservation')}}" class="btn btn__primary header__link">Réserver</a>
+				{% if app.user %}
+					<a href="{{path('app_home')}}" class="btn btn__primary header__link">Mon compte</a>
+					<a href="{{path('app_logout')}}" class="btn btn__primary header__link">Se déconnecter</a>
+				{% else %}
+					<a href="{{path('app_register')}}" class="btn btn__primary header__link">S'inscire</a>
+					<a href="{{path('app_login')}}" class="btn btn__primary header__link">Se connecter</a>
+				{% endif %}
 			</nav>
 		</div>
 	</div>
