--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -18,7 +18,7 @@
 						<a class="footer__contact--links" href="#">Nous contacter</a>
 					</li>
 					<li>
-						<a class="footer__contact--links" href="#">Réserver</a>
+						<a class="footer__contact--links" href="{{path('app_reservation')}}">Réserver</a>
 					</li>
 				</ul>
 			</section>
