--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,12 +5,15 @@
 {% block body %}
 <h1>Formulaire d'inscription</h1>
 
+<section class="test_js">
+{{ form_start(registrationForm, 
 
-{{ form_start(registrationForm) }}
-<section>
+) }}
+
     {{ form_row(registrationForm.email) }}
     {{ form_row(registrationForm.plainPassword, {
-        label: 'Password'
+        'label': 'Mot de passe',
+
     }) }}
     {{ form_row(registrationForm.name) }}
     {{ form_row(registrationForm.firstname) }}
@@ -21,4 +24,5 @@
     <button type="submit" class="btn">S'inscire</button>
 </section>
 {{ form_end(registrationForm) }}
+</section>
 {% endblock %}
