--- a/templates/reservation/reservation.html.twig
+++ b/templates/reservation/reservation.html.twig
@@ -5,17 +5,18 @@
 {% block body %}
 <h1>Formulaire de réservation.</h1>
 
+<section class="js-reservation-submit">
 {{ form_start(reservationForm) }}
-<section>
-    {{ form_row(reservationForm.reservationDate) }}
+    {{ form_row(reservationForm.name) }}
+    {{ form_row(reservationForm.firstname) }}
+    {{ form_row(reservationForm.email) }}
     {{ form_row(reservationForm.numberOfGuests) }}
-    {{ form_row(reservationForm.reservationTime) }}
-    {{ form_row(reservationForm.user) }}
     {{ form_row(reservationForm.allergy) }}
-    {{ form_row(reservationForm.restaurantTime)}}
+    {{ form_row(reservationForm.reservationDate) }}
+    {{ form_row(reservationForm.reservationHour) }}
 
     <button type="submit" class="btn">Réserver</button>
-</section>
 {{ form_end(reservationForm) }}
+</section>
 
 {% endblock %}
