--- a/assets/styles/sass/style.sass
+++ b/assets/styles/sass/style.sass
@@ -8,6 +8,7 @@
 @use "components/_footer"
 @use "components/_home-cover"
 
+@use "components/_menus/_menus"
 @use "components/_menus/_menus-main"
 @use "components/_menus/_menus-lunch-menu"
 @use "components/_menus/_menus-duo-menu"
@@ -19,6 +20,8 @@
 @use "components/_dishes/_dishes-burgers"
 @use "components/_dishes/_dishes-vegetarians"
 @use "components/_dishes/_dishes-desserts"
+
+@use "components/_resa-form"
 
 // Atoms
 @use "atoms/_button"
