--- a/assets/styles/sass/style.sass
+++ b/assets/styles/sass/style.sass
@@ -22,6 +22,8 @@
 @use "components/_dishes/_dishes-desserts"
 
 @use "components/_resa-form"
+@use "components/_login-form"
+@use "components/_register-form"
 
 // Atoms
 @use "atoms/_button"
