--- a/assets/styles/sass/components/_register-form.sass
+++ b/assets/styles/sass/components/_register-form.sass
@@ -1,6 +1,6 @@
 @use "../utils/_main" as utils
 
-.resa-form
+.register-form
     &__title
         @extend %title-1
         text-align: center
@@ -11,7 +11,7 @@
         align-items: center
         justify-content: space-around
         flex-direction: column
-        height: 110vw
+        height: 100%
         margin-top: 5vw
 
     &__form
@@ -28,6 +28,7 @@
         flex-wrap: wrap
         align-content: stretch
         justify-content: space-between
+
         &--label
             @extend %paragraphe-s
 
@@ -45,7 +46,7 @@
             background-color: utils.$gold
             color: utils.$black
 
-#reservation_form_allergy
+#registration_form_allergy
     display: flex
     flex-direction: column
     align-items: center
